syntax = "proto3";
package protocol;
import "value/value.proto";
option go_package = "github.com/offchainlabs/arbitrum/packages/arb-util/protocol";

message TokenTypeBuf {
    bytes value = 1;
}

message AddressBuf {
    bytes value = 1;
}

message MessageBuf {
    value.ValueBuf value = 1;
    TokenTypeBuf tokenType = 2;
    value.BigIntegerBuf amount = 3;
    AddressBuf sender = 4;
}

message TimeBounds {
    uint64 startTime = 1;
    uint64 endTime = 2;
}

message Precondition {
    value.HashBuf beforeHash = 1;
    TimeBounds timeBounds = 2;
    value.HashBuf beforeInbox = 3;
}

message AssertionStub {
    value.HashBuf afterHash = 1;
    uint32 numSteps = 2;
    uint64 numGas = 3;
    value.HashBuf firstMessageHash = 4;
    value.HashBuf lastMessageHash = 5;
    value.HashBuf firstLogHash = 6;
    value.HashBuf lastLogHash = 7;
}

message AssertionBuf {
    value.HashBuf afterHash = 1;
    uint32 numSteps = 2;
    uint64 numGas = 3;
    repeated value.ValueBuf messages = 4;
    repeated value.ValueBuf logs = 5;
}
